<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.testing3.ui.home.LoginFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_register"
            app:destination="@id/navigation_register" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_list_of_blood"
            app:destination="@id/navigation_list_of_blood" />
    </fragment>

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.testing3.ui.home.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>
    <fragment
        android:id="@+id/navigation_list_of_blood"
        android:name="com.example.testing3.ui.home.ListOfBloodGroup"
        android:label="@string/title_list_of_blood"
        tools:layout="@layout/fragment_list_of_blood_group" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>


    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.testing3.ui.home.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.testing3.ui.home.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>